testsuite/bsc.typechecker/kind/TypeAliasResGivenNumIsNonNum.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasResGivenNumIsNonNum.bs
Error: "TypeAliasResGivenNumIsNonNum.bs", line 3, column 25: (T0026)
  The value type `Bit a' was found where a numeric type was expected.
