testsuite/bsc.typechecker/kind/TypeAliasResGivenNumIsNonNum.bs
package TypeAliasResGivenNumIsNonNum () where

type (Foo :: # -> #) a = Bit a

